--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Hordie</title>
+    <title>Hoardie</title>
+    <link rel="icon" type="image/svg+xml" href="icons/favicon.svg">
 </head>
 <body>    
     <script src="index.js"></script>
